# woomy_bot

./: .gitignore  MapInfo.json  README.md  WeaponInfo_Main.json  app.py  coop.json  coop.min.json  lang_dict_EUen.json  main.py  manage.py  pyproject.toml  schedules.py  splatnet3.py  splatoon.py  splatoon2.py  splatoon3.py
app/: models.py  services.py
app/management/commands/: load_salmon_run_shifts.py
app/migrations/: 0001_initial.py  0002_salmonrunstage_weapon_salmonrunshift.py
sample_data/: README.md  coop-schedules.json  coop-schedules2.json  schedules.json  splatoon3_schedules.json
woomy_bot/: asgi.py  settings.py  urls.py  wsgi.py
