[tool.poetry]
name = "woomy-bot"
version = "0.1.0"
description = ""
authors = ["Jiayu Yi <yijiayu@gmail.com>"]
readme = "README.md"
packages = [{include = "woomy_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
httpx = "^0.23.0"
psycopg2 = "^2.9.3"
pendulum = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
